# tg_web_app

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
app/: bot_routers.py  constans.py  database.py  models.py  page.html  send_meeting.py  web.py
app/static/: page.html  script.js  style.css  styles.css
app/templates/: create.html  meeting.html
meeting_app/: app.py  constans.py
meeting_app/db/: engine.py  meeting_crud.py  models.py
meeting_app/static/: creation.js  meeting.js  script.js  styles.css
meeting_app/templates/: create.html  meeting.html
meeting_app/utils/: change_data.py  send_meeting.py
