[tool.poetry]
name = "tg-web-app"
version = "0.1.0"
description = ""
authors = ["alinlpkv <alinlpkv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
