[tool.poetry]
name = "tg-web-app"
version = "0.1.0"
description = ""
authors = ["alinlpkv <alinlpkv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.29"
pytz = "^2024.1"
flask = {extras = ["async"], version = "^3.0.2"}
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
